RESOLVED FIXED106447
[WK2] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files.
https://bugs.webkit.org/show_bug.cgi?id=106447
Summary [WK2] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files.
Krzysztof Czech
Reported 2013-01-09 06:05:08 PST
Some accessibility/atk headers still missing HAVE(ACCESSIBILITY) guards. This will cause build errors.
Attachments
[EFL] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files. (3.21 KB, patch)
2013-01-09 06:06 PST, Krzysztof Czech
no flags
[EFL] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files. (5.35 KB, patch)
2013-01-09 06:37 PST, Krzysztof Czech
no flags
[EFL] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files. (2.11 KB, patch)
2013-01-09 06:45 PST, Krzysztof Czech
no flags
[EFL][WK2] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files. (2.11 KB, patch)
2013-01-09 07:03 PST, Krzysztof Czech
no flags
[WK2] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files. (2.11 KB, patch)
2013-01-11 01:18 PST, Krzysztof Czech
no flags
Krzysztof Czech
Comment 1 2013-01-09 06:06:55 PST
Created attachment 181906 [details] [EFL] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files.
Krzysztof Czech
Comment 2 2013-01-09 06:37:43 PST
Created attachment 181914 [details] [EFL] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files.
Krzysztof Czech
Comment 3 2013-01-09 06:45:57 PST
Created attachment 181915 [details] [EFL] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files.
Gyuyoung Kim
Comment 4 2013-01-09 06:52:01 PST
Comment on attachment 181915 [details] [EFL] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files. View in context: https://bugs.webkit.org/attachment.cgi?id=181915&action=review > Source/WebKit2/ChangeLog:3 > + [EFL] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files. This is not EFL specific patch. It looks [WK2] is more appropriate.
Krzysztof Czech
Comment 5 2013-01-09 07:03:17 PST
Created attachment 181919 [details] [EFL][WK2] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files.
Krzysztof Czech
Comment 6 2013-01-09 07:03:58 PST
Done. (In reply to comment #4) > (From update of attachment 181915 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=181915&action=review > > > Source/WebKit2/ChangeLog:3 > > + [EFL] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files. > > This is not EFL specific patch. It looks [WK2] is more appropriate.
Krzysztof Czech
Comment 7 2013-01-11 01:18:44 PST
Created attachment 182292 [details] [WK2] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files.
Grzegorz Czajkowski
Comment 8 2013-01-11 01:48:48 PST
LGTM.
WebKit Review Bot
Comment 9 2013-01-11 02:31:38 PST
Comment on attachment 182292 [details] [WK2] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files. Clearing flags on attachment: 182292 Committed r139421: <http://trac.webkit.org/changeset/139421>
WebKit Review Bot
Comment 10 2013-01-11 02:31:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.