[WK2] Missing HAVE(ACCESSIBILITY) guards to some atk/ accessibility files. https://bugs.webkit.org/show_bug.cgi?id=106447

Patch by Krzysztof Czech <k.czech@samsung.com> on 2013-01-11
Reviewed by Andreas Kling.

Files do not have HAVE(ACCESSIBILITY) guards.
This is source of potential build breakes, when macro is not enabled.

* WebProcess/WebPage/atk/WebPageAccessibilityObject.h:
* WebProcess/WebPage/atk/WebPageAccessibilityObjectAtk.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@139421 bbb929c8-8fbe-4397-9dbb-9b2b20218538