third_party/WebKit/Source/WebKit2/WebProcess/WebPage/atk/WebPageAccessibilityObject.h
@@ -27,6 +27,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef WebPageAccessibilityObject_h
 #define WebPageAccessibilityObject_h
 
+#if HAVE(ACCESSIBILITY)
+
 #include <atk/atk.h>
 
 namespace WebKit {
@@ -62,4 +64,5 @@ void webPageAccessibilityObjectRefresh(WebPageAccessibilityObject*);
 
 G_END_DECLS
 
+#endif
 #endif // WebPageAccessibilityObject_h
