third_party/WebKit/Source/WebKit2/WebProcess/WebPage/atk/WebPageAccessibilityObjectAtk.cpp
@@ -27,6 +27,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "WebPageAccessibilityObject.h"
 
+#if HAVE(ACCESSIBILITY)
+
 #include "WebPage.h"
 #include <WebCore/AXObjectCache.h>
 #include <WebCore/Frame.h>
@@ -139,3 +141,5 @@ void webPageAccessibilityObjectRefresh(WebPageAccessibilityObject* accessible)
         return;
     atk_object_set_parent(rootObject, ATK_OBJECT(accessible));
 }
+
+#endif
